# gensign

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  clamavsig.cpp  clamavsig.hpp  gensign.sdf  gensign.sln
.deps/: clamavsig.Po
Debug/: gensign.ilk  testgensig.ilk
gensign/: ReadMe.txt  gensign.cpp  gensign.vcxproj  gensign.vcxproj.filters  stdafx.cpp
gensign/Debug/: vc120.idb
gensign/Debug/gensign.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  gensign.lastbuildstate  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: clamavsig.cpp  clamavsig.hpp
testgensig/: Makefile  Makefile.am  Makefile.in  ReadMe.txt  environment_test.hpp  stdafx.cpp  testgensig  testgensig.cpp  testgensig.vcxproj  testgensig.vcxproj.filters
testgensig/.deps/: testgensig.Po
testgensig/Debug/: vc120.idb
testgensig/Debug/testgensig.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
